--- a/src/content/blogs/android-14-now-available-on-linaro-reference-boards-in-aosp.mdx
+++ b/src/content/blogs/android-14-now-available-on-linaro-reference-boards-in-aosp.mdx
@@ -15,9 +15,9 @@ The source code for the latest Android release - Android 14 - is out! The androi
 
 This day-0 boot of Android 14 release has been made possible due to Linaro's long-standing collaboration with Google, the upstream community, as well as the upstream efforts of Linaro's Android team and Linaro’s landing team for Qualcomm. While there is always something more to do, this is a highly satisfying demonstration of the work done to keep these devboards in sync with AOSP.
 
-![Easter-egg Image of Android 14 running on RB5](/linaro-website/images/blog/image-of-rb5-running-android-14)
+![Easter-egg Image of Android 14 running on RB5](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/image-of-rb5-running-android-14)
 
-![Easter-egg Image of Android 14 running on Hikey960](/linaro-website/images/blog/image-of-hikey960-running-android-14)
+![Easter-egg Image of Android 14 running on Hikey960](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/image-of-hikey960-running-android-14)
 
 ## How to get Android 14 to boot on Linaro reference devboards?
 
