--- a/src/content/blogs/building-glibc-with-llvm-the-how-and-why.mdx
+++ b/src/content/blogs/building-glibc-with-llvm-the-how-and-why.mdx
@@ -70,7 +70,7 @@ Building the test suite is just the first step, We also need to make sure that i
 
 Compared to the [reference results from 2.37 release](https://sourceware.org/glibc/wiki/Release/2.37) built with GCC, Clang currently shows:
 
-![Test results for GCC and Clang](/linaro-website/images/blog/test-results-gcc-and-clang)
+![Test results for GCC and Clang](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/test-results-gcc-and-clang)
 
 However with a failure analysis and breakdown, it shows most of the issues as concentrated on specific areas:
 
