--- a/src/content/blogs/comparing-llvm-flang-with-other-fortran-compilers.mdx
+++ b/src/content/blogs/comparing-llvm-flang-with-other-fortran-compilers.mdx
@@ -44,21 +44,21 @@ Unlike LLVM Flang and Gfortran, Classic Flang failed to build the 507.cactuBSSN\
 
 **Figure 1 and Figure 2 show the execution time of the benchmarks, in seconds, for each compiler. Smaller bars are better.**
 
-![SPEC CPU 2017 execution times, for all benchmarks.](/linaro-website/images/blog/figure-1)
+![SPEC CPU 2017 execution times, for all benchmarks.](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/figure-1)
 
 <p>Figure 1: SPEC CPU 2017 execution times, for all benchmarks.&nbsp;</p>
 
-![SPEC CPU 2017 execution times, for Fortran benchmarks.](/linaro-website/images/blog/figure-2)
+![SPEC CPU 2017 execution times, for Fortran benchmarks.](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/figure-2)
 
 <p>Figure 2: SPEC CPU 2017 execution times, for Fortran benchmarks.&nbsp;</p>
 
 **Figure 3 and Figure 4 show the speedup of the benchmarks, relative to Classic Flang 15, for each compiler.**
 
-![SPEC CPU 2017 speedups, for all benchmarks.](/linaro-website/images/blog/figure-3)
+![SPEC CPU 2017 speedups, for all benchmarks.](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/figure-3)
 
 <p>Figure 3: SPEC CPU 2017 speedups, for all benchmarks.&nbsp;</p>
 
-![SPEC CPU 2017 speedups, for Fortran benchmarks](/linaro-website/images/blog/figure-4)
+![SPEC CPU 2017 speedups, for Fortran benchmarks](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/figure-4)
 
 <p>Figure 4: SPEC CPU 2017 speedups, for Fortran benchmarks.&nbsp;</p>
 
