--- a/src/content/blogs/debugging-while-you-sleep-with-ddt.mdx
+++ b/src/content/blogs/debugging-while-you-sleep-with-ddt.mdx
@@ -18,7 +18,7 @@ In my first post on offline debugging I focused on using the DDT graphical user 
 
 # Look Like a Guru – Embrace the Command Line
 
-![command line](/linaro-website/images/blog/command-line)
+![command line](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/command-line)
 
 The DDT graphical user interface much like many application GUIs provides a simplifying, easy to use method of accessing the tool. The GUI accelerates the learning curve and makes quick work of many tasks without even consulting the user guide.  Using the command line, however, adds many flexible capabilities to your debugging tools box.
 
@@ -26,37 +26,37 @@ The DDT graphical user interface much like many application GUIs provides a simp
 
 The DDT GUI provides extensive flexibility of how breakpoints, watchpoints, and tracepoints are set. This robustness of capability is completely accessible through the command line. Let’s start with breakpoints, the good old bread and butter in any debugging session.
 
-![command line basics breakpoints](/linaro-website/images/blog/command-line-basics-breakpoints)
+![command line basics breakpoints](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/command-line-basics-breakpoints)
 
 The first 3 arguments of this offline run were introduced in my first blog but let’s have a quick review. The -offline flag is telling DDT to run without the user interface. The -o flag is providing the name of a file for output.  Remember, if the suffix of the file is anything but .html then DDT creates a flat CSV file. The -mem-debug flag turns on balanced memory debugging. Remember that best practices encourage that we always run our program within the debugger with memory debugging turned on even if we are not looking for a memory problem.  Memory related bugs are always easier to fix when found sooner than later.
 
 Now, on to the new stuff! The -break-at flag specifies a breakpoint location. Let’s use the ddt –help option to get a quick summary on the flag; a good approach for a concise review or maybe when you’re working on the bus without your hotspot.
 
-![command line basics breakpoints 2](/linaro-website/images/blog/command-line-basics-breakpoints-2)
+![command line basics breakpoints 2](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/command-line-basics-breakpoints-2)
 
 For my run I am asking to break at line 73 in the one file comprising my project.
 
-![command line basics break 73](/linaro-website/images/blog/command-line-basics-break-73)
+![command line basics break 73](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/command-line-basics-break-73)
 
 Since I specified an output file with a suffix other than .html DDT created a flat CSV file; not as pretty as those interactive HTML files but a lot more compact and amenable to post-processing. The excerpt above shows the file output at the point of the requested breakpoint.
 
-![forge hit  limits](/linaro-website/images/blog/forge-hit-limits)
+![forge hit  limits](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/forge-hit-limits)
 
 Like the DDT user interface, command line options support controlling hit limits and setting conditionals.  Let’s expand our offline example from above to include a conditional breakpoint.
 
-![forge coding example 1](/linaro-website/images/blog/forge-coding-example-1)
+![forge coding example 1](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/forge-coding-example-1)
 
 For this run I have added a conditional to only break on line 73 if the value of argc is greater than 2.
 
-![forge coding example 2](/linaro-website/images/blog/forge-coding-example-2)
+![forge coding example 2](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/forge-coding-example-2)
 
 Searching the output file, we can see that the breakpoint was not triggered; good deal as argc equaled 1 for that run.  Let’s add a couple arguments and see if the breakpoint is correctly triggered.
 
-![forge coding example 3](/linaro-website/images/blog/forge-coding-example-3)
+![forge coding example 3](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/forge-coding-example-3)
 
 And now searching the output we can see that we halted at that location and we can open the file and go to the breakpoint location to review the state of the program.
 
-![forge coding example 4](/linaro-website/images/blog/forge-coding-example-4)
+![forge coding example 4](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/forge-coding-example-4)
 
 Setting hit limits and defining conditionals for watchpoints and tracepoints is equivalent to breakpoints.  We will leave that as an excellent exercise opportunity for the reader.
 
@@ -74,11 +74,11 @@ D) Save a description of your experiment in the debugger log book. Then, and onl
 
 The process above always pays dividends when debugging. For some bugs such as those that are sporadic, random, or perhaps only evident at large scale it may be very challenging to create a focused hypothesis or limit the domain of the problem. Offline debugging can be particularly effective for finding those kinds of issues. Logging debug information to a file enables us to gather far more data than could ever be reviewed when using the debugger in interactive mode. Let’s run our application with a tracepoint on the inner loop of the calculation.
 
-![forge coding example 5](/linaro-website/images/blog/forge-coding-example-5)
+![forge coding example 5](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/forge-coding-example-5)
 
 This run is telling DDT to set a tracepoint on line 98 of my single file application and to output the values of sum and x at that point. Opening the output file, we can review the tracepoint output.
 
-![forge coding example 6](/linaro-website/images/blog/forge-coding-example-6)
+![forge coding example 6](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/forge-coding-example-6)
 
 My implementation for calculating pi used 1000 timesteps but I am only displaying the first 4 iterations. From this we can see that even in the CSV format DDT uses a summary-oriented technique like sparklines and the gui-based tracepoint output tab. In addition to direct inspection this format is amenable to post-processing with tools like sed, grep and awk to help further refine your search.
 
