--- a/src/content/blogs/enabling-the-next-wave-of-compute-at-the-edge-with-onelab.mdx
+++ b/src/content/blogs/enabling-the-next-wave-of-compute-at-the-edge-with-onelab.mdx
@@ -37,7 +37,7 @@ ONELab has been conceived to address these challenges and enable interoperabilit
 
 ONELab operates as a virtual plug fest, with SiPs and ODMs providing platforms for testing, while OS vendors and cloud service providers contribute operating systems and test suites. The lab schedules test runs, collects results, and provides detailed reports to users, enabling them to identify and resolve interoperability issues proactively.
 
-![TBA](/linaro-website/images/blog/onelab-image)
+![TBA](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/onelab-image)
 
 **The ONELab is already benefiting from the active participation of ADLINK, AMD Xilinx, Arm, Bosch Software and Digital Solution, Qualcomm, Renesas, Red Hat, Texas Instruments as supporting partners.**
 
