--- a/src/content/blogs/introducing-1-0-0-beta-release-of-windowsperf-visual-studio-extension.mdx
+++ b/src/content/blogs/introducing-1-0-0-beta-release-of-windowsperf-visual-studio-extension.mdx
@@ -68,7 +68,7 @@ A unique feature to note: As you configure, the dialogue offers a real-time prev
 
 Once satisfied with your configuration, click save.
 
-![Sampling settings dialog for the WindowsPerf GUI](/linaro-website/images/blog/configuring-the-sampling-parameters)
+![Sampling settings dialog for the WindowsPerf GUI](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/configuring-the-sampling-parameters)
 
 ### Initiating the Sampling Process
 
@@ -88,11 +88,11 @@ An added convenience: Any accessible source file appears as a clickable hyperlin
 
 ### Implementing Code Adjustments
 
-![Sampling explorer window for WindowsPerf GUI](/linaro-website/images/blog/implementing-code-adjustments-1)
+![Sampling explorer window for WindowsPerf GUI](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/implementing-code-adjustments-1)
 
 Based on the insights gathered from the sampling results, proceed to make any required optimizations or edits to your source code.
 
-![How to open a file from the sampling explorer in WindowsPerf GUI](/linaro-website/images/blog/implementing-code-adjustments-2)
+![How to open a file from the sampling explorer in WindowsPerf GUI](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/implementing-code-adjustments-2)
 
 ### Re-evaluating Post Edits
 
