--- a/src/content/blogs/launching -windowsperf-visual-studio-extension-v210.mdx
+++ b/src/content/blogs/launching -windowsperf-visual-studio-extension-v210.mdx
@@ -54,7 +54,7 @@ Check out our [Counting Settings Tutorial](https://gitlab.com/Linaro/WindowsPerf
 
 ## WindowsPerf GUI Counting Settings Example
 
-![WindowsPerf GUI Counting Settings window](/linaro-website/images/blog/windowsperf210-image2_ias8db.png)
+![WindowsPerf GUI Counting Settings window](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/windowsperf210-image2_ias8db.png)
 Above you can see WindowsPerf GUI Counting Settings window with example counting results and launched WPA-plugin in WPA.
 
 # WindowsPerf WPA-Plugin
@@ -74,7 +74,7 @@ WPA capabilities can be expanded upon using the [Microsoft Performance Toolkit S
 
 ## Example WindowsPerf counting data imported to WPA via WPA-plugin.
 
-![WindowsPerf counting data](/linaro-website/images/blog/windowsperf210-image3_op6wd1.png)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/windowsperf210-image3_op6wd1.png)
 
 # Lock-Unlock feature
 
@@ -112,7 +112,7 @@ Explore how to leverage this powerful feature in our [Sampling Explorer Tutorial
 
 ## Example Extension Sample Settings Window with sampling output in Visual Studio IDE
 
-![Extension Sample Settings Window](/linaro-website/images/blog/windowsperf210-image1_irfsku.png)
+![Extension Sample Settings Window](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/windowsperf210-image1_irfsku.png)
 
 # UX Improvements
 
