--- a/src/content/blogs/ledge-blogs-uefi-http-and-https-boot-in-u-boot.mdx
+++ b/src/content/blogs/ledge-blogs-uefi-http-and-https-boot-in-u-boot.mdx
@@ -108,7 +108,7 @@ Block 0x0+0xa99cc9 mapped to 0x41000000
 
 Then we can see loader grub bootloader:
 
-![GRUB boot loader screen](/linaro-website/images/blog/gnu-grub-version-2.12~rc1-7)
+![GRUB boot loader screen](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/gnu-grub-version-2.12~rc1-7)
 
 ## U-Boot Implementation
 
