--- a/src/content/blogs/linaro-at-open-euler-sig.mdx
+++ b/src/content/blogs/linaro-at-open-euler-sig.mdx
@@ -23,19 +23,19 @@ The openEuler Special Interest Group (SIG) Gathering was held in Beijing on July
 
 There were fruitful discussions on the hardware verification regulation and Kernel CI enhancement for openEuler in the Diversity Computing Power track, as well as the collaboration efforts for Apache Bigtop and Lustre upstream support in the Upstream Native Support track. Linaro has shared 3 topics of our work in openEuler and actively engaged with the discussion.
 
-![WindowsPerf counting data](/linaro-website/images/blog/Kevin_Zhao_Presentation_at_openEuler_SIG-new_llgsuj.jpg)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Kevin_Zhao_Presentation_at_openEuler_SIG-new_llgsuj.jpg)
 Picture description: Kevin is sharing the summary report of diversity computing power track
 
 As the openeuler Arm-SIG maintainer, Kevin Zhao is serving as the producer of the Diversity Computing Power track, leading the discussion between multiple SIG groups including Kernel SIG, Intel Arch SIG, Arm SIG, RISC-V SIG, etc. This track discussed how to enhance openEuler's support for the latest platforms of various mainstream architectures. The participants proposed a concept of diversity computing power certification, shared some performance optimizations and user cases, and also looked ahead to discuss the user scenarios of Arm Confidential Compute Architecture (Arm CCA) technology. As a new feature for Arm V9, Arm CCA has attracted a lot of attention in the discussion and several silicon vendors shared their interests in their product adoption and end to end solution design for this security enhancement.
 
 Guodong Xu from Linaro/HiSilicon Landing Team and Xinliang Liu from the Linaro Data Center Group joined the Upstream Native Support track. This track focused primarily on the support of key technical features of openEuler by upstream communities such as the Linux kernel, compiler, big data components, storage, etc. Guodong shared the Big Data SIG achievements: Apache Bigtop 3.3.0 has native support for openEuler, and also Big Data SIG has incubated the Bigtop-manager as a sub-project inside of Apache Bigtop. Next, they will continue to promote the openEuler 24.03-LTS support for Bigtop, and touch optimization works on every aspect of Big Data components for Arm Aarch64 ecosystem.
 
-![WindowsPerf counting data](/linaro-website/images/blog/Guodong_Xu_Presentation_at_openEuler_SIG-new_n9upti.jpg)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Guodong_Xu_Presentation_at_openEuler_SIG-new_n9upti.jpg)
 Picture description: Guodong is sharing the effort for openEuler Big Data SIG.
 
 Xinliang shared the Lustre on openEuler enablement and releases status. He has also shared the work for setting up the Lustre Arm64 CI and the next stage release plan for openEuler 24.03 LTS. Lustre on openEuler 22.03 LTS has been released following the distro release cycle and we are also working on porting Lustre to openEuler 20.03 LTS, as this version is still widely used in some verticals, such as HPC environments, that have relatively conservative evolution strategies.
 
-![WindowsPerf counting data](/linaro-website/images/blog/Xinliang_Liu_Presentation_at_openEuler_SIG_2024-new_wwz1ed.jpg)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Xinliang_Liu_Presentation_at_openEuler_SIG_2024-new_wwz1ed.jpg)
 Picture description: Xinliang is sharing the effort for Lustre support on openEuler.
 
 openEuler and Linaro collaboration
