--- a/src/content/blogs/linaro-contributions-to-the-6-2-linux-kernel-release.mdx
+++ b/src/content/blogs/linaro-contributions-to-the-6-2-linux-kernel-release.mdx
@@ -14,13 +14,13 @@ author: linaro
 related: []
 ---
 
-![Most active 6.2 Employers](/linaro-website/images/blog/most-active-6.2-employers)
+![Most active 6.2 Employers](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/most-active-6.2-employers)
 
 As the development statistics compiled by [LWN](https://lwn.net/Articles/923410/) demonstrate, Linaro employees remain key code reviewers and committers. Except for writing code, a significant number of all v6.2 reviews came from Linaro engineers, placing the company as second reviewer for that release. Linaro employs several Linux kernel maintainers which were responsible for applying 6.5% of all v6.2 commits. A lot of code is not only written by Linaro, but is actually going through our hands and eyes.
 
 In this blog, we asked the Linaro Engineers featured in LWN’s list of most active developers to the 6.2 Kernel Release to talk about their contributions.
 
-![Most Active 6.2 Developers](/linaro-website/images/blog/most-active-6.2-developers)
+![Most Active 6.2 Developers](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/most-active-6.2-developers)
 
 ## Krzysztof Kozlowski
 
@@ -67,7 +67,7 @@ He also worked on adding clock provider support to the Qualcomm CPUFreq driver t
 
 Linaro consistently ranks in the top ten for companies who review, test and report the most regressions. We asked Naresh Kamboju - Linux Kernel Validation Engineer at Linaro - to share some statistics on our contributions to the latest 6.2 Kernel Release.
 
-![Test and review credits 6.2 kernel release](/linaro-website/images/blog/test-and-review-credits-6.2-kernel-release)
+![Test and review credits 6.2 kernel release](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/test-and-review-credits-6.2-kernel-release)
 
 ### Reviewed-by - Linaro in third place
 
