--- a/src/content/blogs/linaro-contributions-to-the-6-5-linux-kernel-release.mdx
+++ b/src/content/blogs/linaro-contributions-to-the-6-5-linux-kernel-release.mdx
@@ -16,13 +16,13 @@ author: linaro
 related: []
 ---
 
-![Most active 6.5 employers](/linaro-website/images/blog/most-active-6.5-employers)
+![Most active 6.5 employers](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/most-active-6.5-employers)
 
 [LWN's development statistics](https://lwn.net/Articles/941675/) for the 6.5 Kernel release prominently highlight Linaro as one of the leading contributors to the Linux kernel. These statistics underscore Linaro's unwavering dedication to advancing the Arm open source ecosystem.
 
 In this blog post, we engage with Linaro Engineers who have been recognized by LWN as some of the most active developers in the 6.5 Kernel Release. We delve into their significant contributions and insights into the Linux kernel development process.
 
-![Most active 6.5 developers](/linaro-website/images/blog/most-active-6.5-developers)
+![Most active 6.5 developers](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/most-active-6.5-developers)
 
 ## Krzysztof Kozlowski
 
@@ -55,7 +55,7 @@ Other than that, Dmitry continued his work on both older and new Qualcomm platfo
 
 Last, but not least, one of the drivers previously developed by Dmitry finally found its way to the Linux kernel (finally polished by another Linaro engineer, Neil Armstrong), allowing us to enable DisplayPort on the newest development boards produced by Qualcomm, SM8550-QRD.
 
-![Test and review credits in 6.5](/linaro-website/images/blog/test-and-review-credits-in-6.5)
+![Test and review credits in 6.5](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/test-and-review-credits-in-6.5)
 
 ## Conclusion
 
