--- a/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
+++ b/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
@@ -18,13 +18,13 @@ This day-0 boot of Android 15 release is a result of continued collaboration bet
 
 Linaro reference devboards for AOSP are meticulously tested and maintained by Linaro’s team of industry-leading experts, who ensure that they are always up to date with the latest software releases, security patches, and bug fixes. This level of support is critical, as it guarantees that developers have access to reliable and stable hardware, enabling them to focus on their projects without the added burden of troubleshooting hardware-software compatibility issues.
 
-![Easter-egg image of Android 15 running on SM8550-HDK](/linaro-website/images/blog/image4_fwjoth.jpg)
+![Easter-egg image of Android 15 running on SM8550-HDK](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/image4_fwjoth.jpg)
 
-![Easter-egg Image of Android 15 running on RB5](/linaro-website/images/blog/image2_ibbgnp.jpg)
+![Easter-egg Image of Android 15 running on RB5](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/image2_ibbgnp.jpg)
 
-![Easter-egg Image of Android 15 running on DB845c](/linaro-website/images/blog/image3_fqvkki.jpg)
+![Easter-egg Image of Android 15 running on DB845c](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/image3_fqvkki.jpg)
 
-![Easter-egg Image of Android 15 running on Hikey960](/linaro-website/images/blog/image5_udmw6f.jpg)
+![Easter-egg Image of Android 15 running on Hikey960](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/image5_udmw6f.jpg)
 
 # How to get Android 15 to boot on Linaro reference devboards?
 
