--- a/src/content/blogs/linaro-enables-op-tee-rpmb-access-directly-from-the-linux-kernel.mdx
+++ b/src/content/blogs/linaro-enables-op-tee-rpmb-access-directly-from-the-linux-kernel.mdx
@@ -33,7 +33,7 @@ We are interested in the latter and the documentation describes in [detail](http
 
 Since the eMMC (embedded Multi-Media Card) is not under the control of the Secure World and OP-TEE does not have any RPMB drivers, we need help from Linux userspace to complete the transactions and mediate the messages to the Linux kernel. The OP-TEE supplicant is a userspace application that mediates accesses for us and it looks like this:
 
-![tpm-access-diagram-one](/linaro-website/images/blog/flow-diagram_fo1czc.png)
+![tpm-access-diagram-one](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/flow-diagram_fo1czc.png)
 
 ## Early storage access
 
@@ -53,7 +53,7 @@ With this [patchset](https://lore.kernel.org/lkml/20240916145352.388340-1-ulf.ha
 
 The TPM access to the RPMB now looks like this
 
-![tpm-access-diagram-two](/linaro-website/images/blog/flow-diagram-2_gzcyij.png)
+![tpm-access-diagram-two](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/flow-diagram-2_gzcyij.png)
 
 ## Contact us
 
