--- a/src/content/blogs/linaro-fosdem-2024.mdx
+++ b/src/content/blogs/linaro-fosdem-2024.mdx
@@ -23,7 +23,7 @@ The Université libre de Bruxelles held the event on February 3rd and 4th, and t
 
 [Presentation Slides](https://fosdem.org/2024/events/attachments/fosdem-2024-1716-u-boot-for-modern-qualcomm-phones/slides/22104/fosdem24_aDevbas.pdf) // [Talk Video](https://ftp.belnet.be/mirror/FOSDEM/video/2024/h1309/fosdem-2024-1716-u-boot-for-modern-qualcomm-phones.av1.webm)
 
-![Casey presenting about U-boot in FOSDEM24](/linaro-website/images/blog/u-boot-for-modern)
+![Casey presenting about U-boot in FOSDEM24](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/u-boot-for-modern)
 
 **Bryan O'Donoghue** talked about a **fully open-source stack for MIPI cameras**. It was a joint talk with Bryan and Hans De Goede from Redhat about supporting MIPI cameras with a fully open libcamera / Linux kernel stack.
 
@@ -31,7 +31,7 @@ Linaro has engaged with libcamera to provide a Soft ISP solution for MIPI camera
 
 We discussed at a high level what the core problem to be solved is - debayering, 3As in the absence of Hard ISP support, how we engaged with libcamera on design and implementation, the state of the art in CPU ISP and near future extensions to GPU ISP.
 
-![Bryan talking about open source cameras in FOSDEM24](/linaro-website/images/blog/a-fully-open-source-stack-for-mipi-cameras.-fosdem24)
+![Bryan talking about open source cameras in FOSDEM24](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/a-fully-open-source-stack-for-mipi-cameras.-fosdem24)
 
 [Presentation Slides](https://fosdem.org/2024/events/attachments/fosdem-2024-3013-a-fully-open-source-stack-for-mipi-cameras/slides/22223/A_fully_open_source_stack_for_MIPI_cameras_-_FO_dhMg1oP.pdf) // [Talk Video](https://video.fosdem.org/2024/ud2120/fosdem-2024-3013-a-fully-open-source-stack-for-mipi-cameras.av1.webm)
 
@@ -49,7 +49,7 @@ Nevertheless the Qualcomm Reference platforms get as early as possible mainline 
 
 The talk gave a tour of supported platforms, current and possible future achievements, and integration examples with mobile distributions like PostmarketOS.
 
-![Neil talks about mainline linux status on Qualcomm SoCs in FOSDEM24](/linaro-website/images/blog/mainline-linux-on-qualcomm-socs-are-we-here-now-)
+![Neil talks about mainline linux status on Qualcomm SoCs in FOSDEM24](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/mainline-linux-on-qualcomm-socs-are-we-here-now-)
 
 [Presentation Slides](https://fosdem.org/2024/events/attachments/fosdem-2024-1707-mainline-linux-on-qualcomm-socs-are-we-here-now-/slides/22126/FOSDEM24_-_Mainline_Linux_on_Qualcomm_SoCs_are_cW72KOo.pdf) // [Talk Video](https://video.fosdem.org/2024/h1309/fosdem-2024-1707-mainline-linux-on-qualcomm-socs-are-we-here-now-.mp4)
 
