--- a/src/content/blogs/new-release-windowsperf-visual-studio-extension-v1000.mdx
+++ b/src/content/blogs/new-release-windowsperf-visual-studio-extension-v1000.mdx
@@ -27,17 +27,17 @@ This Linaro [open-source project](https://gitlab.com/Linaro/WindowsPerf/vs-exten
 * To address the large list of events, we've added an autocomplete component that helps filter down the list of events in the selection input.
 * Realigned the command preview to match [WindowsPerf 3.3.0](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases) version.
 
-![Command preview](/linaro-website/images/blog/windowsperf-image1_cyt6rv.gif)
+![Command preview](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/windowsperf-image1_cyt6rv.gif)
 
 ## Disassembly Features
 
-![Disassembly output](/linaro-website/images/blog/windowsperf-image3_exytus.png)
+![Disassembly output](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/windowsperf-image3_exytus.png)
 
 * Added disassembly output from sampling runs to the Sampling Explorer widget, providing users with the opportunity to dive deeper into the most frequently executed instructions.
 * Enhanced the editor by adding line highlighting to better identify hotspots directly in the codebase.
 * Improved the percentage display in the Sampling Explorer table.
 
-![Editor showing hotspots](/linaro-website/images/blog/windowsperf-image2_dookxc.png)
+![Editor showing hotspots](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/windowsperf-image2_dookxc.png)
 
 # Fixes
 * Fixed typos, alignment issues, and errors in form validation.
