--- a/src/content/blogs/protected-uefi-variables-with-u-boot.mdx
+++ b/src/content/blogs/protected-uefi-variables-with-u-boot.mdx
@@ -47,7 +47,7 @@ StandAloneMM includes the driver that implements the accesses to our hardware. E
 
 If you combine all of the above, the final architecture looks like this:
 
-![OP-TEE, U-BOOT & Firmware volume Block Protocol architecture diagram](/linaro-website/images/blog/firmware-volume-block-protocol-architecture-898-9f96a2_vv52sn.webp)
+![OP-TEE, U-BOOT & Firmware volume Block Protocol architecture diagram](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/firmware-volume-block-protocol-architecture-898-9f96a2_vv52sn.webp)
 An obvious downside is that you need to compile 4 different projects to get your final firmware. On the other hand if we choose to make it a TA (Trusted Application) we use only 3, but you'd have to compile that extra TA and link it to OP-TEE as an EarlyTA anyway.
 
 # Building
