--- a/src/content/blogs/subkeys-in-op-tee-part-1.mdx
+++ b/src/content/blogs/subkeys-in-op-tee-part-1.mdx
@@ -26,7 +26,7 @@ Trusted Applications (TAs) could initially only be verified with a single public
 
 Subkeys support was introduced in OP-TEE version 3.20.0 (released January 20th, 2023)  to provide a public key hierarchy allowing different actors to sign different TAs without sharing a private key.
 
-![Figure 1: Signing TAs with a common root key](/linaro-website/images/blog/figure-1-signing-tas-with-a-common-root-key-)
+![Figure 1: Signing TAs with a common root key](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/figure-1-signing-tas-with-a-common-root-key-)
 
 \
 **Figure 1: Signing TAs with a common root key**
@@ -35,7 +35,7 @@ The private key of the root key is needed when signing TA8 in the example in Fig
 
 Problem: if the private key of the root key leaks any of the TAs can be updated by someone with access to that key.
 
-![Figure 2: Signing TAs with a subkey](/linaro-website/images/blog/figure-2-signing-tas-with-a-subkey)
+![Figure 2: Signing TAs with a subkey](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/figure-2-signing-tas-with-a-subkey)
 
 \
 **Figure 2: Signing TAs with a subkey**\
