--- a/src/content/blogs/tuxmake-building-linux-with-kernel-org-toolchains.mdx
+++ b/src/content/blogs/tuxmake-building-linux-with-kernel-org-toolchains.mdx
@@ -36,7 +36,7 @@ The TuxMake kernel.org toolchain Docker images use a Debian base with all the ne
 
 These Docker images are available in two host architecture combinations (aarch64 and x86\_64). Figure 1, shows the supported kernel.org toolchains and the target architectures.
 
-![Tuxmake kernel.org toolchain vs architecture support matrix](/linaro-website/images/blog/figure-1-tuxmake-blog)
+![Tuxmake kernel.org toolchain vs architecture support matrix](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/figure-1-tuxmake-blog)
 
 NOTE: The loongarch target architecture Docker image is only available for x86\_64 host architecture.
 
