--- a/src/content/blogs/v6-2-v6-6-linux-kernel-one-year-stats-a-journey-into-the-heart-of-linaro-s-success.mdx
+++ b/src/content/blogs/v6-2-v6-6-linux-kernel-one-year-stats-a-journey-into-the-heart-of-linaro-s-success.mdx
@@ -18,17 +18,17 @@ author: linaro
 related: []
 ---
 
-![Most active employers, 6.2 through 6.6](/linaro-website/images/blog/most-active-employers-6.2-through-6.6)
+![Most active employers, 6.2 through 6.6](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/most-active-employers-6.2-through-6.6)
 
 With V6.6 Linaro celebrates another year of contributions to the Linux Kernel. Through our engineers’ expertise and dedication, we explore the significant contributions they have made gaining valuable insights into the Linux kernel development process from V6.2 to the current V6.6 release.
 
 Linaro has the biggest maintainer impact among all releases:
 
-![Top non-author signoffs, 6.2 to 6.6](/linaro-website/images/blog/top-non-author-signoffs-6.2-to-6.6)
+![Top non-author signoffs, 6.2 to 6.6](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/top-non-author-signoffs-6.2-to-6.6)
 
 <br />
 
-![Most active 6.6 emplovers](/linaro-website/images/blog/most-active-6.6-emplovers)
+![Most active 6.6 emplovers](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/most-active-6.6-emplovers)
 
 # Krzysztof Kozlowski
 
