--- a/src/content/blogs/how-to-create-a-virtual-system-control-and-management-interface-scmi-server.mdx
+++ b/src/content/blogs/how-to-create-a-virtual-system-control-and-management-interface-scmi-server.mdx
@@ -22,7 +22,7 @@ In 2019, Linaro started to study how to provide a virtual System Control Process
 
 Our first implementation of a virtual SCP has been an OP-TEE pseudo trusted application (PTA). The SCMI server has to run in a Trusted Execution Environment because it has to manage secure resources or resources shared between both secure and non-secure worlds. Regarding the transport layer, we originally considered using SPCI (which will then become FFA) but it was not yet ready for what we wanted to do so we finally chose to use native OP-TEE methods supporting both static and dynamic shared memory.
 
-![This framework provides information on various concepts and components related to the Linux Kernel and system-level operations](/linaro-website/images/blog/yuqb4yhqv0ttirn4nsm0n40_bs07smd0r31nmv1-mdacpsuew4jfojtgeufjgzx7eentnidi26ngxasnwyyspw4y8gaoj5eufqn1v1nxnfih7yjct4qqu4oylyce)
+![This framework provides information on various concepts and components related to the Linux Kernel and system-level operations](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/yuqb4yhqv0ttirn4nsm0n40_bs07smd0r31nmv1-mdacpsuew4jfojtgeufjgzx7eentnidi26ngxasnwyyspw4y8gaoj5eufqn1v1nxnfih7yjct4qqu4oylyce)
 
 Because SCMI is an extensible specification with the v3.2 beta version being available on the Arm developer website, we decided to leverage the [SCP-firmware code](https://github.com/ARM-software/SCP-firmware) which is a reference implementation of this specification instead of creating yet another one. As a result, optee\_os uses the SCP-firmware source code for its SCMI server and the SCP-firmware supports optee-os as an Execution Environment in addition to the default bare metal mode or the CMSIS compliant RTOS mode.
 
@@ -44,7 +44,7 @@ Since then, virtualization and device assignments have raised a lot of interest.
 
 Our next activity will be to further extend the support of virtual SCMI servers by adding FFA as a new transport layer and by running the SCP-firmware in a Secure Partition. With the permission access command, the system will dynamically set or unset which resources can be accessed by a VM / SP while launching it. Furthermore, the power coprocessor, if present, will not have to manage those configurations but only system resources.
 
-![This framework provides information on resources control and permission control related to the SCMI Server](/linaro-website/images/blog/1mbw5j8fwcfjwmav_9omaezjs0hyicewscfo63qgtvqra88pow6n27kldyr8tb0gz-_pimdnorg8yrgtz4kum0mmhsgxgyzxnm3mzdjpf0_cp2b-bohgal286xrs)
+![This framework provides information on resources control and permission control related to the SCMI Server](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/1mbw5j8fwcfjwmav_9omaezjs0hyicewscfo63qgtvqra88pow6n27kldyr8tb0gz-_pimdnorg8yrgtz4kum0mmhsgxgyzxnm3mzdjpf0_cp2b-bohgal286xrs)
 
 In order to ease the configuration of the SCP-firmware, we are adding the support of Device Tree at compilation time like what is done by [zephyr](https://github.com/ARM-software/SCP-firmware/pull/77). We also want to go further and find a generic way to identify the device’s resources and ease the SCMI server configuration. 
 
