--- a/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
+++ b/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
@@ -38,7 +38,7 @@ KVM support is experimental, and breaks the DSPs (as well as potentially other t
 ## Supported platforms
 
 The exact status of support depends on the device. The current integration branch lacks support for UFS on SM8550/SM8650. Other devices can boot from internal storage or USB.
-![WindowsPerf counting data](/linaro-website/images/blog/Chainload_diagram_djfdeb.png)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Chainload_diagram_djfdeb.png)
 
 ## Flashing U-Boot
 
@@ -53,7 +53,7 @@ Installation is almost the same for all methods, for the boot, uefi, or hyp imag
 OR
 
 `edl --loader path/to/prog_firehose_ddr.elf w PART u-boot-BOARD-PART.xyz`
-![WindowsPerf counting data](/linaro-website/images/blog/Chainload_table_g3bqvi.png)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Chainload_table_g3bqvi.png)
 
 ## Building from source
 
@@ -127,7 +127,7 @@ fastboot flash hyp .output/u-boot-hyp.mbn
 ## A deeper dive into Qualcomm’s boot flow
 
 Qualcomm's Android boot flow & Chainloading
-![WindowsPerf counting data](/linaro-website/images/blog/Qualcomm_s_Android_boot_flow_chainloading_ht0lyy.png)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Qualcomm_s_Android_boot_flow_chainloading_ht0lyy.png)
 
 The standard boot flow on Qualcomm devices looks roughly like this (source: [Qualcomm secure boot and image authentication](https://www.qualcomm.com/content/dam/qcomm-martech/dm-assets/documents/secure-boot-and-image-authentication-version_final.pdf)).
 
@@ -201,7 +201,7 @@ DRAM: 8 GiB (effective 7.9 GiB)
 
 Qualcomm’s new RB3 Gen 2 board is the first to be supported by [Qualcomm Linux](https://www.qualcomm.com/developer/software/qualcomm-linux), a close(r) to upstream Yocto build. It boots with systemd-boot stub out of the box, and can run systemd-boot or GRUB. However, the stock bootloader includes a lot of customisations, a custom DTB store and various non-standard DTB changes done by the bootloader.
 
-![WindowsPerf counting data](/linaro-website/images/blog/Qualcomm_RB3_Gen_2_Platform_mf4ftb.png)
+![WindowsPerf counting data](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Qualcomm_RB3_Gen_2_Platform_mf4ftb.png)
 
 In the long term, it is anticipated that Qualcomm’s EDK2 will become SystemReady compliant. But interest in U-Boot is still strong (both to offer a standard EFI interface in the short term and to offer more diversity to Qualcomm’s customers).
 
