--- a/src/content/blogs/linaro-helps-openeuler-to-officially-join-ceph-support-matrix.mdx
+++ b/src/content/blogs/linaro-helps-openeuler-to-officially-join-ceph-support-matrix.mdx
@@ -19,11 +19,11 @@ As an open source operating system for digital infrastructure that covers all sc
 
 In December 2022, Linaro joined the openEuler Software-Define Storage (SDS) Special Interest Group (SIG), which is the SIG for multiple technologies of storage solutions. The SDS SIG offers support for Ceph, Lustre, BeeGFS, Mayastor, SPDK, DAOS, OpenZFS, etc. It aims to gather storage talents to jointly create high-quality, high-performance, and high-reliability distributed storage component versions, and build a rich North-South ecosystem. Xinliang Liu and Kevin Zhao, from Linaro, are working closely with the openEuler SDS SIG and actively contribute to promote the openEuler support in storage upstream.
 
-![ C openEuler announcement](/linaro-website/images/blog/openeuler01)
+![ C openEuler announcement](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/openeuler01)
 
 On July 20 2023, under the joint promotion and contribution of Linaro and the openEuler SDS SIG, the Ceph community merged the pull request for openEuler native support, which means that the openEuler officially joined the [Ceph support matrix](https://docs.ceph.com/en/latest/install/get-packages/#openeuler) and passed the CI verification.
 
-![ Ceph download page for openEuler packages](/linaro-website/images/blog/openeuler2)
+![ Ceph download page for openEuler packages](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/openeuler2)
 
 Currently, openEuler finished the porting and compatibility test for multiple versions of Ceph. The openEuler community will continue to adapt the support for the new versions of Ceph, enrich the coverage of the openEuler Ceph integration test and follow the Ceph upstream release schedule. Besides, the SDS SIG has set up the Ceph on [openEuler daily CI jobs](https://github.com/openeuler-mirror/ceph-daily-build).
 
