--- a/src/content/blogs/qualcomm-and-linaro-enable-latest-flagship-snapdragon-compute-soc.mdx
+++ b/src/content/blogs/qualcomm-and-linaro-enable-latest-flagship-snapdragon-compute-soc.mdx
@@ -53,7 +53,7 @@ Linaro provides [a step-by-step guide](https://git.codelinaro.org/linaro/qcomlt/
 
 The installer also includes GRUB, which provides dual-boot support out-of-the-box and also allows chainloading other EFI applications, including the Fastboot EFI app. Booting via fastboot protocol helps a lot when it comes to rapid kernel development and testing because it avoids the need to build the deb package and install it manually. Instead, you can boot the kernel image with the devicetree blob and the initramfs (including the modules) provided via a boot image (similar to other mobile platforms).
 
-![Debian running on top of latest linux-next, with GPU rendering, on Snapdragon X Elite (X1E80100) Compute Reference Device](/linaro-website/images/blog/debian-running)
+![Debian running on top of latest linux-next, with GPU rendering, on Snapdragon X Elite (X1E80100) Compute Reference Device](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/debian-running)
 
 # What’s next
 
