--- a/src/content/blogs/top-byte-ignore-for-fun-and-memory-savings.mdx
+++ b/src/content/blogs/top-byte-ignore-for-fun-and-memory-savings.mdx
@@ -118,7 +118,7 @@ Now remember that we also want to type check our arguments. So in this case we h
 
 With all that, this is a symbol table entry:
 
-![Symbol table entry](/linaro-website/images/blog/symbol-table-entry-)
+![Symbol table entry](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/symbol-table-entry-)
 
 We’ll use that symbol index (the index of the entry in the table) to reference the symbol. For example:
 
@@ -186,7 +186,7 @@ On AArch64 this is 8 bytes saving 2 bytes per entry compared to the packed struc
 
 It’s not as simple as the storage makes it look. Here’s how the value is used:
 
-![TBI for symbol table](/linaro-website/images/blog/tbi-for-symbol-table-)
+![TBI for symbol table](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tbi-for-symbol-table-)
 
 Now you see why I specified that integers would be stored directly in the table and that they would be 32 bit. If they were 64 bit we would not be able to store them in the table because the top byte would corrupt their value (if this was [Zig](https://ziglang.org/documentation/0.4.0/#Primitive-Types) we could use “u56”).
 
