--- a/src/content/blogs/unified-boot-on-qualcomm-rbx-development-boards.mdx
+++ b/src/content/blogs/unified-boot-on-qualcomm-rbx-development-boards.mdx
@@ -30,7 +30,7 @@ For the context of this blog, unified boot refers to the ability of multiple pla
 
 The existing boot flow on Qualcomm devices has various stages in the bootloader, eventually loading Android Bootloader (ABL) which then loads the appended device-tree (DT) and kernel image and can then boot. The steps to boot upstream Linux kernel using appended DT method can be found in this [blog.](https://www.linaro.org/blog/let-s-boot-the-mainline-linux-kernel-on-qualcomm-devices/)
 
-![Existing boot flow on Qualcomm devices](/linaro-website/images/blog/existing-boot-flow-on-qualcomm-devices)
+![Existing boot flow on Qualcomm devices](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/existing-boot-flow-on-qualcomm-devices)
 
 The problem with this method is that the device tree is appended to the kernel image, making it board specific. As a result, getting a generic kernel image to load on any Qualcomm platform is virtually impossible.
 
@@ -38,7 +38,7 @@ The problem with this method is that the device tree is appended to the kernel i
 
 This limitation can be overcome by using U-boot to perform the task of loading the DT from device storage and then loading the kernel from either USB/SD-Card/storage.
 
-![Unified Boot using U-boot](/linaro-website/images/blog/unified-boot-using-u-boot)
+![Unified Boot using U-boot](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/unified-boot-using-u-boot)
 
 In this mechanism, the existing bootloader chain on the Qualcomm Snapdragon device can be utilised “as-is”. Here the u-boot is chainloaded as an Android boot image by Qualcomm’s  ABL bootloader. Then, using the U-boot, we can load a generic arm64 Linux kernel image.
 
